--- a/downsample_textures.ipynb
+++ b/downsample_textures.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_texture = 'redstone_block'"
+    "example_texture = 'fire_0'"
    ]
   },
   {
@@ -133,8 +133,18 @@
    "source": [
     "texture_colors = verdict.Dict()\n",
     "for block_id, texture in textures.items():\n",
-    "    texture_color = block_reduce( texture, block_size=(texture.shape[0], texture.shape[1], 1 ), func=np.mean )\n",
-    "    texture_colors[block_id] = texture_color[0][0]"
+    "    \n",
+    "    # Don't let empty pixels contribute\n",
+    "    if texture.shape[2] == 4:\n",
+    "        is_empty = np.isclose( texture[:,:,3], 0. )\n",
+    "        is_empty_formatted = np.repeat( is_empty[:, :, np.newaxis], 4, axis=2 )\n",
+    "        texture = np.ma.masked_array( texture, is_empty_formatted )\n",
+    "        \n",
+    "    texture_color = np.mean( texture, axis=(0,1) )\n",
+    "    texture_colors[block_id] = texture_color\n",
+    "    \n",
+    "    # texture_color = block_reduce( texture, block_size=(texture.shape[0], texture.shape[1], 1 ), func=np.mean )\n",
+    "    # texture_colors[block_id] = texture_color[0][0]"
    ]
   },
   {
@@ -153,6 +163,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ce4c9a8e-d046-4a3b-b7ac-d05eacea35d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Water color input manually\n",
+    "texture_colors['water'] = np.array([ 14, 80, 255, 255. ]) / 255.\n",
+    "texture_colors['bubble_column'] = texture_colors['water']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9c8ecf36-e19b-404d-a5b5-c1a4dbd1fd4d",
    "metadata": {},
    "outputs": [],
@@ -165,12 +187,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce4c9a8e-d046-4a3b-b7ac-d05eacea35d7",
+   "id": "990533b5-2726-4238-b0d7-c6122371f158",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Water coloor input manually\n",
-    "texture_colors['water'] = np.array([ 14, 80, 255, 255. ]) / 255."
+    "# FIRE\n",
+    "texture_colors['fire'] = texture_colors['fire_0']\n",
+    "texture_colors['soul_fire'] = texture_colors['soul_fire_0']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcc86419-45c2-430f-8510-d4f1cfbc0681",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Magma is also known magma block\n",
+    "texture_colors['magma_block'] = texture_colors['magma']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1380c407-e1ee-4524-b31a-1ef4d75aac5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Moss block is also known moss carpet\n",
+    "texture_colors['moss_carpet'] = texture_colors['moss_block']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66168e30-3fe3-4822-a6e7-25e88c952a70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Handle pointed dripstone\n",
+    "texture_colors['pointed_dripstone'] = texture_colors['dripstone_block']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "647bfc23-c83e-47b0-82a8-dfbb04156d32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Color smooth sandstone the same color as cut sandstone\n",
+    "texture_colors['smooth_sandstone'] = texture_colors['cut_sandstone']\n",
+    "texture_colors['smooth_red_sandstone'] = texture_colors['cut_red_sandstone']"
    ]
   },
   {
@@ -193,7 +261,13 @@
     "    # Torches will be colored as air\n",
     "    if 'torch' in block_id:\n",
     "        texture_colors[block_id] = texture_colors['air']\n",
-    "        texture_colors['wall_{}'.format( block_id )] = texture_colors['air']"
+    "        texture_colors['wall_{}'.format( block_id )] = texture_colors['air']\n",
+    "        \n",
+    "    # Ensure all colors have an alpha\n",
+    "    if block_color.size == 3:\n",
+    "        block_color_w_alpha = np.array([ 1., 1., 1., 1. ])\n",
+    "        block_color_w_alpha[:3] = block_color\n",
+    "        texture_colors[block_id] = block_color_w_alpha"
    ]
   },
   {
@@ -220,6 +294,14 @@
     "ax.imshow( [[ texture_colors[example_texture], ],] )\n",
     "ax.set_axis_off()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7674cac-2228-4dff-8f76-5c895dacc4e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
