--- a/generate_maps.ipynb
+++ b/generate_maps.ipynb
@@ -128,12 +128,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbaede5e-1d9f-4a3f-9da8-2b25dcbf2097",
+   "id": "baaf83e0-cfed-4186-80ad-31daed3b1f5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = 0\n",
-    "region_fp = region_fps[i]"
+    "# Get the possible y values\n",
+    "region_random = anvil.Region.from_file( region_fps[0] )\n",
+    "chunk_random = anvil.Chunk.from_region( region_random, 0, 0 )\n",
+    "section_height_range = anvil.chunk._section_height_range( chunk_random.version )\n",
+    "y_range = np.arange( section_height_range.start * CHUNK_SIZE, section_height_range.stop * CHUNK_SIZE )"
    ]
   },
   {
@@ -160,42 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6470153b-6301-400c-b9fa-645dcd136c65",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get region coords\n",
-    "_, x_region, z_region, _ = os.path.basename( region_fp ).split( '.' )\n",
-    "x_region, z_region = int( x_region ), int( z_region )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6286591b-633a-4b1d-84d9-552fb05fa258",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Make anvil classes\n",
-    "region = anvil.Region.from_file( region_fp )\n",
-    "chunk_origin = anvil.Chunk.from_region( region, 0, 0 )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "baaf83e0-cfed-4186-80ad-31daed3b1f5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the possible y values\n",
-    "section_height_range = anvil.chunk._section_height_range( chunk_origin.version )\n",
-    "y_range = np.arange( section_height_range.start * CHUNK_SIZE, section_height_range.stop * CHUNK_SIZE )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "86c9cd43-7c0f-43a6-b3ec-05b0e94be63e",
    "metadata": {},
    "outputs": [],
@@ -211,32 +178,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09d66aba-1cf0-4cef-8c4d-25fe355b69e1",
+   "id": "6804777c-0783-438b-bb07-a72d409fa7f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract data in string format\n",
-    "data_shape = ( REGION_SIZE, y_range.size )\n",
-    "data = np.zeros( data_shape, dtype='<U22' ).astype( str )\n",
-    "for i_chunk in tqdm.tqdm( range( CHUNKS_PER_REGION ) ):\n",
-    "    for k_chunk in range( CHUNKS_PER_REGION ):\n",
-    "        \n",
-    "            if k_chunk != norm_dim_value:\n",
-    "                continue\n",
-    "        \n",
-    "            # You can also provide the region file name instead of the object\n",
-    "            try:\n",
-    "                chunk = anvil.Chunk.from_region( region, i_chunk, k_chunk )\n",
-    "            except anvil.chunk.ChunkNotFound as e:\n",
-    "                missing_chunks.append( ( region_fp, i_chunk, k_chunk ) )\n",
-    "                continue\n",
-    "                \n",
-    "            for index, block in enumerate( chunk.stream_chunk() ):\n",
-    "                \n",
-    "                if z_inds[index] != 0:\n",
+    "# Loop through and get data for all regions\n",
+    "region_datas = {}\n",
+    "for i, region_fp in enumerate( tqdm.tqdm( region_fps ) ):\n",
+    "    region = anvil.Region.from_file( region_fp )\n",
+    "    \n",
+    "    # Get region coords\n",
+    "    _, x_region, z_region, _ = os.path.basename( region_fp ).split( '.' )\n",
+    "    x_region, z_region = int( x_region ), int( z_region )\n",
+    "\n",
+    "    # Extract data in string format\n",
+    "    data_shape = ( REGION_SIZE, y_range.size )\n",
+    "    data = np.zeros( data_shape, dtype='<U22' ).astype( str )\n",
+    "    for i_chunk in range( CHUNKS_PER_REGION ):\n",
+    "        for k_chunk in range( CHUNKS_PER_REGION ):\n",
+    "\n",
+    "                if k_chunk != norm_dim_value:\n",
     "                    continue\n",
-    "                                    \n",
-    "                data[i_chunk*16 + x_inds[index],y_inds[index]] = block.id"
+    "\n",
+    "                # You can also provide the region file name instead of the object\n",
+    "                try:\n",
+    "                    chunk = anvil.Chunk.from_region( region, i_chunk, k_chunk )\n",
+    "                except anvil.chunk.ChunkNotFound as e:\n",
+    "                    continue\n",
+    "\n",
+    "                for index, block in enumerate( chunk.stream_chunk() ):\n",
+    "\n",
+    "                    if z_inds[index] != 0:\n",
+    "                        continue\n",
+    "\n",
+    "                    data[i_chunk*16 + x_inds[index],y_inds[index]] = block.id\n",
+    "                    \n",
+    "    region_datas[(x_region,z_region)] = data"
    ]
   },
   {
@@ -254,27 +231,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_palette = np.unique( data )\n",
-    "img = np.ones( ( data.shape[0], data.shape[1], 4 ) )\n",
-    "for block_id in tqdm.tqdm( data_palette ):\n",
-    "    \n",
-    "    block_id_split = block_id.split( '_' )\n",
-    "    \n",
-    "    if block_id_split[0] == 'tall':\n",
-    "        block_id = '_'.join( block_id_split[1:] )\n",
-    "    \n",
-    "    try:\n",
-    "        block_color = block_colors[block_id]\n",
+    "region_imgs = {}\n",
+    "for ( x_region, z_region ), data in tqdm.tqdm( region_datas.items() ):\n",
+    "\n",
+    "    data_palette = np.unique( data )\n",
+    "    img = np.ones( ( data.shape[0], data.shape[1], 4 ) )\n",
+    "    for block_id in data_palette:\n",
     "        \n",
-    "    # Some have different colors for side or top\n",
-    "    except KeyError:\n",
-    "        if image_norm in [ 'x', 'z' ]:\n",
-    "            block_color = block_colors['{}_side'.format( block_id )]\n",
-    "        else:\n",
-    "            block_color = block_colors['{}_tope'.format( block_id )]\n",
-    "    \n",
-    "    # Color in the image\n",
-    "    img[np.where( data==block_id )] = block_color"
+    "        # Skip null\n",
+    "        if block_id == '':\n",
+    "            continue\n",
+    "\n",
+    "        block_id_split = block_id.split( '_' )\n",
+    "\n",
+    "        if block_id_split[0] == 'tall':\n",
+    "            block_id = '_'.join( block_id_split[1:] )\n",
+    "            \n",
+    "        if 'wall_' in block_id:\n",
+    "            block_id = block_id.replace( 'wall_', '' )\n",
+    "\n",
+    "        try:\n",
+    "            block_color = block_colors[block_id]\n",
+    "        # Some have different colors for side or top\n",
+    "        except KeyError:\n",
+    "            if image_norm in [ 'x', 'z' ]:\n",
+    "                block_color = block_colors['{}_side'.format( block_id )]\n",
+    "            else:\n",
+    "                block_color = block_colors['{}_top'.format( block_id )]\n",
+    "\n",
+    "        # Color in the image\n",
+    "        img[np.where( data==block_id )] = block_color\n",
+    "        \n",
+    "    region_imgs[( x_region, z_region )] = img"
    ]
   },
   {
@@ -284,13 +272,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure()\n",
-    "ax = plt.gca()\n",
+    "for ( x_region, z_region ), img in region_imgs.items():\n",
     "\n",
-    "ax.imshow( np.rot90( img, axes=(0,1) ) )\n",
+    "    fig = plt.figure()\n",
+    "    ax = plt.gca()\n",
     "\n",
-    "ax.set_aspect( 'equal' )\n",
-    "ax.set_axis_off()"
+    "    ax.imshow( np.rot90( img, axes=(0,1) ) )\n",
+    "\n",
+    "    ax.set_aspect( 'equal' )\n",
+    "    ax.set_axis_off()"
    ]
   },
   {
